<resources>
    <string name="app_name">SkateShare</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register_hint">Register here.</string>
    <string name="missing_email">Please enter a email!</string>
    <string name="missing_password">Please enter a password!</string>
    <string name="missing_username">Please enter a username!</string>
    <string name="short_password">Password must be at least 8 characters!</string>
    <string name="event_passes">Event passed with no errors.</string>

    <string name="register_btn">Register</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="login_hint">Login here.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
    </string>
    <string name="edit_profile_option">Edit Profile</string>
    <string name="settings_option">Settings</string>
    <string name="about_option">About</string>

    <string name="settings_logout">Logout</string>
    <string name="settings_send_feedback">Send Feedback</string>
    <string name="settings_delete_account">Delete Account</string>
    <string name="delete_account_warning">This action is irreversible.\nAll public and private data will be deleted.</string>
    <string name="delete_account_prompt">Delete Account?</string>

    <string name="hint_name">Name (optional)</string>
    <string name="hint_bio">Bio</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="edit_success">Success! Changes will take effect on refresh!</string>
    <string name="title_activity_feed">FeedActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="post_description_prompt">Tell us about your post!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="feed_loading">Loading more items…</string>

    <string name="post_deleted">Post deleted successfully!</string>
    <string name="image_required">All posts require an image!</string>
    <string name="confirm_delete_post">Delete Post?</string>
    <string name="irreversible">This action is irreversible.</string>
    <string name="post_created">Post created successfully!</string>
    <string name="refresh">Refresh</string>

    <string name="feed">Feed</string>
    <string name="routes">Routes</string>
    <string name="record">Record</string>
    <string name="profile">Profile</string>
    <string name="begin">Begin</string>
    <string name="finish">Finish</string>

    <string name="start_processing">Starting route processing…</string>
    <string name="converting_coordinates">Converting coordinates…</string>
    <string name="smoothing_route">Smoothing route…</string>
    <string name="encoding_route">Encoding route…</string>
    <string name="saving_to_database">Saving route to database…</string>

    <string name="finish_recording_prompt">End Route</string>
    <string name="finish_recording_warning">Ended routes cannot be resumed!</string>
    <string name="route_start_time">00:00:00</string>
    <string name="route_start_distance">---</string>
    <string name="route_start_speed">---</string>

    <string name="create_bug_report">Create Bug Report</string>
    <string name="bug_feature_description">What feature were you using when the bug occurred?</string>
    <string name="bug_description">Describe the bug and your actions leading up to it</string>
    <string name="upload_image">Upload a screenshot of the bug (optional)</string>
    <string name="submit">Submit</string>
    <string name="fill_required_fields">Please fill out all required fields!</string>
    <string name="loading_maps">Loading Maps</string>

    <string name="route_header">%1$s shared a new route!</string>

    <string-array name="sorting_choices">
        <item>Date</item>
        <item>Distance</item>
        <item>Duration</item>
        <item>Speed</item>
    </string-array>

    <string-array name="shared_sorting_choices">
        <item>Distance To</item>
        <item>Route Distance</item>
    </string-array>

    <string-array name="radius_choices_miles">
        <item>1 Mile</item>
        <item>2 Miles</item>
        <item>5 Miles</item>
    </string-array>

    <string-array name="radius_choices_kilometers">
        <item>1 Kilometer</item>
        <item>2 Kilometers</item>
        <item>5 Kilometers</item>
    </string-array>

    <string name="speed">Speed</string>
    <string name="hint_board_type">What board type is best for this route?</string>
    <string name="hint_terrain_type">How would you describe the terrain?</string>
    <string name="hint_road_type">How would you describe the road quality?</string>
    <string name="board_type">Board Type</string>
    <string name="terrain_type">Terrain Type</string>
    <string name="road_type">Road Type</string>
    <string name="route_description_hint">Tell us about your route!</string>

    <string name="route_post_data">
        🤙 %1$.1f %2$s \n
        🌄 %3$s \n
        🛣 %4$s \n
        ⚡ %5$s recommended! \n
        🔥 Your expected time: %6$s \n
        🌎 %7$s
    </string>

    <string name="route_post_data_no_location">
        🤙 %1$.1f %2$s \n
        🌄 %3$s \n
        🛣 %4$s \n
        ⚡ %5$s recommended! \n
        🔥 Your expected time: %6$s
    </string>

    <string name="unknown_location">Unknown Location</string>

    <string name="unknown_time">Unknown Time</string>
    <string name="minutes_time">%1$.1f minutes</string>
    <string name="hour_time">%1$d hour %2$.1f minutes</string>
    <string name="hours_time">%1$d hours %2$.1f minutes</string>

    <string name="route_deleted">Route deleted successfully!</string>
    <string name="failed_to_delete">Failed to delete this route. Please try again!</string>

    <string name="bug_report_success">Thank you, your report has been recorded.</string>
    <string name="bug_report_missing_field">Please fill out all required fields!</string>

    <string name="share_route_success">"Success! Thanks for sharing your route!"</string>
    <string name="sort_by">Sort by:</string>

    <string name="miles_away">%1$.1f Mi away</string>
    <string name="kilometers_away">%1$.1f Km away</string>

    <string name="distance_miles">%1$.1f Mi</string>
    <string name="distance_kilometers">%1$.1f Km</string>

    <string name="speed_mph">%1$.1f MPH</string>
    <string name="speed_kph">%1$.1f KPH</string>
    <string name="tags">Tags</string>
    <string name="upload_image_optional">Upload an image! (optional)</string>
    <string name="change_units">Change Units</string>

    <string name="unit_change_message">
        This will set all relevant units to ones of your preference.
        \nUser generated units (i.e. in descriptions) will not change.
    </string>
    <string name="unit_change_header">Change Display Units</string>
    <string name="units_imperial">Imperial \uD83D\uDE0E</string>
    <string name="units_metric">Metric \uD83E\uDD2E</string>

    <string name="feedback_header">Send Feedback</string>
    <string name="feedback_message">We would love to hear your feedback! 🙂</string>

    <string name="send_feedback">Send</string>
    <string name="board">Board</string>
    <string name="posts">Posts</string>

    <string name="unshared_board">Oh no! It looks like this user hasn\'t shared their board info yet! 😞</string>
    <string name="board_tags">
        ⚡ %1$.1f amp hours\n
        🔋 %2$s\n
        🚀 %3$s top speed\n
        💪 %4$s motors\n
        💸 %5$s
    </string>
    <string name="board_tags_label">Board Tags</string>
    <string name="amp_hours">Amp Hours</string>
    <string name="battery_amp_hours">Battery Amp Hours</string>
    <string name="battery_configuration">Battery Configuration</string>
    <string name="motor_configuration">Motor Configuration</string>
    <string name="top_speed">Top Speed</string>
    <string name="esc">ESC</string>
    <string name="board_description_prompt">Tell us about your board!</string>
    <string name="edit_board_option">Edit Board</string>

    <string name="error_saving_board">There was an error saving your changes. Please make sure all fields are properly filled out.</string>
    <string name="board_saved_successfully">Board updated successfully!</string>

    <string name="decimal_format">%1$.1f</string>
    <string name="hint_speed">(ex. 27.4)</string>
    <string name="hint_esc">(ex. DIY 12s ESC)</string>
    <string name="hint_motor">(ex. Dual 190kv 6355s)</string>
    <string name="hint_battery">(ex. 12s4p Samsung 30Qs)</string>
    <string name="hint_amps">(ex. 12.4)</string>

    <string name="location_permissions_prompt">Location permissions are required for recording and viewing routes!</string>
    <string name="radius">Radius</string>

    <string name="gps_warning">
        GPS tracking has been disabled, or battery saver is on.
        Please re-enable GPS and disable battery saver to resume route tracking!
    </string>

    <string name="image_mb_too_large">Please select an image smaller than %1$dMB!</string>

    <string name="default_bio">This user hasn\'t told us anything about themselves yet! 😞</string>
    <string name="user_not_found">Something went wrong. 😓\nIf you\'re seeing this page, an error has occurred. Please try again later, or submit a bug report if this behavior continues.</string>

    <string-array name="board_choices">
        <item>Shortboard</item>
        <item>Longboard</item>
        <item>Mountainboard</item>
    </string-array>

    <string-array name="hill_choices">
        <item>Nearly Flat</item>
        <item>Moderately Hilly</item>
        <item>Very Hilly</item>
    </string-array>

    <string-array name="road_choices">
        <item>Smooth Roads</item>
        <item>Average Roads</item>
        <item>Rough Roads</item>
        <item>Trail</item>
    </string-array>

</resources>