<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.profile.SettingsFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logout"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/settings_logout" />

        <TextView
            android:id="@+id/feedback"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="16dp"
            android:text="@string/settings_send_feedback"/>

        <TextView
            android:id="@+id/change_units"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="16dp"
            android:text="@string/change_units"/>

        <TextView
            android:id="@+id/delete_account"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="16dp"
            android:text="@string/settings_delete_account"
            android:textColor="@color/red_700"/>

    </LinearLayout>

</layout>